add google analytics

--- a/_config.yml
+++ b/_config.yml
@@ -14,4 +14,4 @@ email: jschm20@student.sdu.dk
 profile_picture: docs/asstes/Owl_Logo.png
 
 # Google Analytics ID
-google_analytics: 
+google_analytics: G-F4S9JYV02N
