--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,8 @@
 _site/*
+.DS_Store
+.jekyll-metadata
+.obsidian/app.json
+.obsidian/appearance.json
+.obsidian/core-plugins.json
+.obsidian/hotkeys.json
+.obsidian/workspace
